[package]
name = "basrai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
image = "0.24.5"
num-complex = "0.4.2"
once_cell = "1.17.0"
